--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Playlists</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <script type="module" src="src/main.js"></script>
+</head>
+
+<body>
+
+  
+
+</body>
+
+</html>
