--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <nav>
       <div class="nav-items txt-shadow-gold">
         <h3>
-          People
+          Planets
           <div>
-            <button id="people-previous" type="button">
+            <button id="planets-previous" type="button">
               &lt;&lt; Previous
             </button>
-            <button id="people-next" type="button">Next &gt;&gt;</button>
+            <button id="planets-next" type="button">Next &gt;&gt;</button>
           </div>
         </h3>
       </div>
 
       <div class="nav-items txt-shadow-blue txt-link">
-        <a href="/index.html">Go To Planets</a>
+        <a href="/People.html"> Go To People</a>
       </div>
     </nav>
 
     <main>
       <div class="txt-shadow-red">
-        <h1 class="main-title">STAR WARS PEOPLE API</h1>
+        <h1 class="main-title">STAR WARS PLANETS API</h1>
         <h2 class="main-title">
           Use the previous and next buttons on each category to view the
           information provided by the Star Wars API
